updated api paths
